Optimización de imagenes Hero

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <link
       rel="preload"
       as="image"
-      href="/orangebee_2_react/hero-mobile.webp"
+      href="/orangebee_2_react/hero-mobile.avif"
       media="(max-width: 767px)"
       fetchpriority="high"
     />
     <link
       rel="preload"
       as="image"
-      href="/orangebee_2_react/hero-desktop.webp"
+      href="/orangebee_2_react/hero-desktop.avif"
       media="(min-width: 768px)"
       fetchpriority="high"
     />
