Actualización de rutas para build productivo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="OrangeBee — Gestión profesional de cobranza preventiva, administrativa y judicial para empresas, banca digital y FinTechs en México." />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="OrangeBee" />
-    <meta name="keywords" content="cobranza preventiva, cobranza administrativa, cobranza judicial, recuperación de cartera vencida, cobranza México, FinTech cobranza, banca digital cobranza" />
+    <meta name="keywords" content="cobranza preventiva, cobranza administrativa, cobranza judicial, recuperación de cartera vencida, cobranza México, FinTech cobranza, banca digital cobranza, Despacho de cobranza, Cobranza digital" />
     <link rel="canonical" href="https://orangebee.com.mx" />
 
     <!-- Open Graph (Facebook & LinkedIn) -->
@@ -24,13 +24,6 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="OrangeBee — Cobranza Inteligente" />
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="OrangeBee | Cobranza Inteligente y Recuperación de Cartera" />
-    <meta name="twitter:description" content="Gestión profesional de cobranza preventiva, administrativa y judicial para empresas, banca digital y FinTechs en México." />
-    <meta name="twitter:image" content="https://orangebee.com.mx/hero-desktop.avif" />
-    <meta name="twitter:image:alt" content="OrangeBee — Cobranza Inteligente" />
 
     <!-- Datos estructurados JSON-LD (Schema.org Organization) -->
     <script type="application/ld+json">
